--- a/sass/main.css
+++ b/sass/main.css
@@ -1,6 +1,24 @@
+@-webkit-keyframes show-up-main {
+  0% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes show-up-main {
   0% {
     opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes show-up-sub {
+  0% {
+    opacity: 0;
   }
   100% {
     opacity: 1;
@@ -16,14 +34,29 @@
   }
 }
 
-@keyframes moveInButton {
+@-webkit-keyframes moveInButton {
   0% {
     opacity: 0;
-    transform: translateY(20px);
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes moveInButton {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
@@ -32,7 +65,8 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -40,7 +74,8 @@ html {
 }
 
 body {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -54,7 +89,8 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
-  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
   margin-bottom: 60px;
   width: 73vw;
 }
@@ -64,7 +100,8 @@ body {
   font-size: 80px;
   font-weight: 700;
   letter-spacing: 25px;
-  animation: show-up-main 4s ease-in;
+  -webkit-animation: show-up-main 4s ease-in;
+          animation: show-up-main 4s ease-in;
 }
 
 .heading-primary-sub {
@@ -72,7 +109,8 @@ body {
   font-size: 19px;
   font-weight: 400;
   letter-spacing: 47px;
-  animation: show-up-sub 4s ease-in-out;
+  -webkit-animation: show-up-sub 4s ease-in-out;
+          animation: show-up-sub 4s ease-in-out;
   margin-left: 13px;
   margin-right: -10px;
 }
@@ -84,22 +122,28 @@ body {
   padding: 15px 40px;
   display: inline-block;
   border-radius: 3px;
+  -webkit-transition: all .2s;
   transition: all .2s;
 }
 
 .btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .btn:hover::after {
-  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
   opacity: 0;
 }
 
 .btn:active {
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-transform: translateY(-1px);
+          transform: translateY(-1px);
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .btn-white {
@@ -121,16 +165,20 @@ body {
   top: 0;
   left: 0;
   z-index: -1;
+  -webkit-transition: all .4s;
   transition: all .4s;
 }
 
 .btn-animated {
-  animation: moveInButton .5s ease-out .75s;
-  animation-fill-mode: backwards;
+  -webkit-animation: moveInButton .5s ease-out .75s;
+          animation: moveInButton .5s ease-out .75s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
 }
 
 .header {
   position: relative;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(226, 21, 21, 0.8)), to(rgba(219, 244, 0, 0.8))), url(../img/hero.jpg);
   background-image: linear-gradient(to right bottom, rgba(226, 21, 21, 0.8), rgba(219, 244, 0, 0.8)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
@@ -139,12 +187,15 @@ body {
 .header__text-box--left {
   height: 95vh;
   float: left;
-  clip-path: polygon(0 0, 85% 0, 44% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 0, 85% 0, 44% 100%, 0 100%);
+          clip-path: polygon(0 0, 85% 0, 44% 100%, 0 100%);
 }
 
 .header__text-box--right {
   height: 95vh;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(233, 15, 15, 0.8)), to(rgba(230, 230, 230, 0.624)));
   background-image: linear-gradient(to right bottom, rgba(233, 15, 15, 0.8), rgba(230, 230, 230, 0.624));
-  clip-path: polygon(65% 0, 100% 0, 100% 100%, 34% 100%);
+  -webkit-clip-path: polygon(65% 0, 100% 0, 100% 100%, 34% 100%);
+          clip-path: polygon(65% 0, 100% 0, 100% 100%, 34% 100%);
 }
 /*# sourceMappingURL=main.css.map */
