--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,49 +1,49 @@
-.header {
-    position: relative;
-    background-image: linear-gradient(
-                to right bottom, 
-                rgba(226, 21, 21, 0.8), 
-                rgba(219, 244, 0, 0.8)),
-                url(../img/hero.jpg);
-            background-size: cover;
-            background-position: top;
+// .header {
+//     // position: relative;
+//     // background-image: linear-gradient(
+//     //             to right bottom, 
+//     //             rgba(226, 21, 21, 0.8), 
+//     //             rgba(219, 244, 0, 0.8)),
+//     //             url(../img/hero.jpg);
+//     //         background-size: cover;
+//     //         background-position: top;
 
 
-    // &__logo-box {
-    //     position: absolute;
-    //     top: 40px;
-    //     left: 40px;
+//     // &__logo-box {
+//     //     position: absolute;
+//     //     top: 40px;
+//     //     left: 40px;
     
-    // }
+//     // }
     
-    // &__logo {
-    //     height: 35px;
+//     // &__logo {
+//     //     height: 35px;
     
-    // }
+//     // }
 
-    &__text-box {
-        // position: absolute;
-        // top: 30%;
-        // left: 50%;
-        // transform: translate(-50%, -50%);
-        // text-align: center;
+//     &__text-box {
+//         // position: absolute;
+//         // top: 30%;
+//         // left: 50%;
+//         // transform: translate(-50%, -50%);
+//         // text-align: center;
 
-        &--left {
-            height: 95vh;
-            float: left;
+//         &--left {
+//             height: 95vh;
+//             float: left;
             
-            clip-path: polygon(0 0, 85% 0, 44% 100%, 0 100%);
+//             clip-path: polygon(0 0, 85% 0, 44% 100%, 0 100%);
             
-        }
+//         }
 
-        &--right {
-            height: 95vh;
-            background-image: linear-gradient(
-                to right bottom, 
-                rgba(233, 15, 15, 0.8), 
-                rgba(230, 230, 230, 0.624));
-            clip-path: polygon(65% 0, 100% 0, 100% 100%, 34% 100%);
-        }
-    }
+//         &--right {
+//             height: 95vh;
+//             background-image: linear-gradient(
+//                 to right bottom, 
+//                 rgba(233, 15, 15, 0.8), 
+//                 rgba(230, 230, 230, 0.624));
+//             clip-path: polygon(65% 0, 100% 0, 100% 100%, 34% 100%);
+//         }
+//     }
     
-}
+// }
