--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,6 @@
 
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+// Główny kolor linków i przycisków na stronie
+$color-primary: rgb(147, 14, 224);
+$color-primary-active: rgb(128, 0, 202);
+
+$color-secondary: rgb(230, 230, 230);
