--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,36 +1,38 @@
 body {
-    font-family: "Lato", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     line-height: 1.7;
     color: #777;
     padding: 15px 20px;
 }
 
-.heading-primary {
-    color: #fff;
-    text-transform: uppercase;
+// DO USUNIĘCIA !!!!
 
-    backface-visibility: hidden;
-    margin-bottom: 60px;
-    width: 73vw;
+// .heading-primary {
+//     color: #fff;
+//     text-transform: uppercase;
 
-    &-main {
-        display: block;
-        font-size: 80px;
-        font-weight: 700;
-        letter-spacing: 25px;
-        animation: show-up-main 4s ease-in;
+//     backface-visibility: hidden;
+//     margin-bottom: 60px;
+//     width: 73vw;
+
+//     &-main {
+//         display: block;
+//         font-size: 80px;
+//         font-weight: 700;
+//         letter-spacing: 25px;
+//         animation: show-up-main 4s ease-in;
     
-    }
+//     }
     
-    &-sub {
-        display: block;
-        font-size: 19px;
-        font-weight: 400;
-        letter-spacing: 47px;
-        animation: show-up-sub 4s ease-in-out;
-        margin-left: 13px;
-        margin-right: -10px;
-    }
+//     &-sub {
+//         display: block;
+//         font-size: 19px;
+//         font-weight: 400;
+//         letter-spacing: 47px;
+//         animation: show-up-sub 4s ease-in-out;
+//         margin-left: 13px;
+//         margin-right: -10px;
+//     }
 
-}
+// }
