--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -20,11 +20,11 @@
 @keyframes moveInButton {
     0% {
         opacity: 0;
-        transform: translateY(20px);
+        transform: scale(.5);
     }
 
     100% {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateY(1);
     }
 }
