--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,7 +3,7 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: #777;
-    padding: 15px 20px;
+    // padding: 15px 20px;
 }
 
 // DO USUNIĘCIA !!!!
