--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,16 @@
+// ABSTRACTS
 @import 'abstracts/functions';
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
-
+// BASE
 @import 'base/animations';
 @import 'base/base';
 @import 'base/typography';
 @import 'base/utilities';
-
+// COMPONENTS
 @import 'components/button';
-
+//LAYOUT
+@import 'layout/footer';
 @import 'layout/header';
-
+//PAGES
 @import 'pages/home';
