--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .section-start {
-    background-color: tomato;
+    position: relative;
     height: 100vh;
 }
 
@@ -17,3 +17,8 @@
     background-color: cadetblue;
     height: 100vh;
 }
+
+// .section-all {
+//     text-align: center;
+//     padding-top: 50px; 
+// }
