--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'base/typography';
 @import 'base/utilities';
 // COMPONENTS
+@import 'components/bg-video';
 @import 'components/button';
 //LAYOUT
 @import 'layout/footer';
