--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,21 +1,30 @@
 .header {
     position: fixed;
-    background-color: lightgray;
     width: 100%;
-    padding: 5px;
+    padding: 20px;
+    z-index: 1;
+    // background-color: $color-primary;
 
     &__navigation {
-        display: flex;
-        justify-content: flex-end;
+        float: right;
         
         a {
+            font-size: 15px;
             padding: 0 10px;
             text-decoration: none;
-            color: $color-primary;
+            color: white;
             animation: moveInButton .6s ease-in;
+            
+            @include screen('mobile') {
+                font-size: 20px;
+            }
+
+            @include screen('tablet') {
+                font-size: 25px;
+            }
 
             &:hover, &:focus {
-                border-bottom: 1px solid $color-primary;
+                border-bottom: 1px solid white;
             }
         }
     }
