Dodanie nowych kolorów

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,9 @@
 
 // Główny kolor linków i przycisków na stronie
 $color-primary: rgb(147, 14, 224);
+$color-primary-dark: rgb(93, 3, 145);
 
 $color-secondary: rgb(230, 230, 230);
+
+$color-lightgray: rgb(221, 221, 221);
+$color-darkgray: rgb(88, 88, 88);
