--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,11 @@
-.section-start {
+.section-home {
     position: relative;
     height: 100vh;
+    background-image: -webkit-gradient(linear, left top, right bottom, from(rgba($color-lightgray, 0.8)), to(rgba($color-darkgray, 0.8))), url("../img/josh-spires-734341-unsplash.jpg");
+    background-image: linear-gradient(to right bottom, rgba($color-lightgray, 0.8), rgba($color-darkgray, 0.8)), url("../img/josh-spires-734341-unsplash.jpg");
+    background-size: cover;
+    background-position: top;
+
 }
 
 .section-about {
@@ -22,3 +27,12 @@
 //     text-align: center;
 //     padding-top: 50px; 
 // }
+
+
+.text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
