--- a/sass/components/_bg-video.scss
+++ b/sass/components/_bg-video.scss
@@ -1,15 +1,22 @@
 .bg-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    // z-index: -1;
-    opacity: .2;
+
+   
+        // content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: .2;
+        // overflow: hidden;
+        // background-image: linear-gradient(to right bottom, rgba(0,0,0,0.4), rgba(0,0,0,1));
+        
 
     &__content {
         height: 100%;
         width: 100%;
         object-fit: cover;
     }
+    
+    
 }
