--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,31 +1,44 @@
 .header {
     position: fixed;
+    height: 10vh;    
     width: 100%;
-    padding: 20px;
     z-index: 1;
-    // background-color: $color-primary;
+    background-color: $color-primary;
+    opacity: .7;
 
+    &__logo-box {
+        position: absolute; 
+        top: 1rem;
+        left: 1rem;
+    }
+    
+    &__logo {
+        height: 3.5rem;
+    }
+    
     &__navigation {
+        display: inline-flex;
         float: right;
+        padding: 10px;
         
         a {
-            font-size: 15px;
+            font-size: 10px;
             padding: 0 10px;
             text-decoration: none;
-            color: white;
-            animation: moveInButton .6s ease-in;
+            text-transform: lowercase;
+            color: $color-lightgray;
             
             @include screen('mobile') {
-                font-size: 20px;
+                font-size: 15px;
             }
 
             @include screen('tablet') {
-                font-size: 25px;
+                font-size: 20px;
             }
 
             &:hover, &:focus {
-                border-bottom: 1px solid white;
             }
         }
+
     }
 }
