--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,10 @@
 .header {
     position: fixed;
-    height: 10vh;    
+    height: 10px;    
     width: 100%;
     z-index: 1;
     background-color: $color-primary;
-    opacity: .7;
+    // opacity: .7;
 
     &__logo-box {
         position: absolute; 
@@ -25,8 +25,8 @@
             font-size: 10px;
             padding: 0 10px;
             text-decoration: none;
-            text-transform: lowercase;
-            color: $color-lightgray;
+            text-transform: uppercase;
+            color: white;
             
             @include screen('mobile') {
                 font-size: 15px;
@@ -37,6 +37,8 @@
             }
 
             &:hover, &:focus {
+                border-bottom: 2px solid $color-primary;
+                color: $color-primary;
             }
         }
 
