--- a/sass/main.css
+++ b/sass/main.css
@@ -156,11 +156,10 @@ body {
 
 .header {
   position: fixed;
-  height: 10vh;
+  height: 10px;
   width: 100%;
   z-index: 1;
   background-color: #930ee0;
-  opacity: .7;
 }
 
 .header__logo-box {
@@ -185,8 +184,8 @@ body {
   font-size: 10px;
   padding: 0 10px;
   text-decoration: none;
-  text-transform: lowercase;
-  color: #dddddd;
+  text-transform: uppercase;
+  color: white;
 }
 
 @media only screen and (min-width: 460px) {
@@ -201,13 +200,15 @@ body {
   }
 }
 
-.section-home {
-  position: relative;
-  height: 100vh;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(221, 221, 221, 0.8)), to(rgba(88, 88, 88, 0.8))), url("../img/josh-spires-734341-unsplash.jpg");
-  background-image: linear-gradient(to right bottom, rgba(221, 221, 221, 0.8), rgba(88, 88, 88, 0.8)), url("../img/josh-spires-734341-unsplash.jpg");
-  background-size: cover;
-  background-position: top;
+.header__navigation a:hover, .header__navigation a:focus {
+  border-bottom: 2px solid #930ee0;
+  color: #930ee0;
+}
+
+.parallax-window {
+  min-height: 100vh;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.6)));
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.6));
 }
 
 .section-about {
