--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -43,3 +43,8 @@
     transform: translate(-50%, -50%);
     text-align: center;
 }
+
+.separates {
+    background-color: $color-primary;
+    height: 10px;
+}
