--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,38 +1,7 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
     line-height: 1.7;
     color: #777;
     // padding: 15px 20px;
 }
-
-// DO USUNIĘCIA !!!!
-
-// .heading-primary {
-//     color: #fff;
-//     text-transform: uppercase;
-
-//     backface-visibility: hidden;
-//     margin-bottom: 60px;
-//     width: 73vw;
-
-//     &-main {
-//         display: block;
-//         font-size: 80px;
-//         font-weight: 700;
-//         letter-spacing: 25px;
-//         animation: show-up-main 4s ease-in;
-    
-//     }
-    
-//     &-sub {
-//         display: block;
-//         font-size: 19px;
-//         font-weight: 400;
-//         letter-spacing: 47px;
-//         animation: show-up-sub 4s ease-in-out;
-//         margin-left: 13px;
-//         margin-right: -10px;
-//     }
-
-// }
