--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -45,6 +45,9 @@
 }
 
 .separates {
-    background-color: $color-primary;
+    // background-color: $color-primary;
     height: 10px;
+    background-image: linear-gradient(to right, rgba($color-primary, 0.8), rgba($color-lightgray, 0.8));
+    box-shadow: 0px 1px 6px $color-primary;
 }
+
