CSS - Added photos

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,6 +11,7 @@ html {
 }
 
 body {
-   box-sizing: border-box;
-   background-color: $color-secondary;
+    margin: 0 10px;
+    box-sizing: border-box;
+    background-color: $color-secondary;
 }
