--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -49,8 +49,8 @@
     }
 
     &-animated {
-        animation: moveInButton .5s ease-out .75s;
-        animation-fill-mode: backwards;
+        // animation: moveInButton .5s ease-out .75s;
+        // animation-fill-mode: backwards;
     }
 
 }
