--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,3 +7,5 @@ $color-secondary: rgb(230, 230, 230);
 
 $color-lightgray: rgb(221, 221, 221);
 $color-darkgray: rgb(88, 88, 88);
+
+$color-white: white;
