--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -12,11 +12,14 @@
 
 @keyframes borderBottom {
     0% {
+        // opacity: .3;
+        // border-bottom: 1px solid $color-primary;
         border-bottom: none;
-        opacity: .3;
+        transform: translateY(-10px);
+        
     }
     100% {
-        border-bottom: 1px solid white;
-        opacity: 1;
+        // opacity: 1;
+        border-bottom: 1px solid $color-primary;
     }
 }
