--- a/sass/main.css
+++ b/sass/main.css
@@ -27,22 +27,22 @@
 @-webkit-keyframes borderBottom {
   0% {
     border-bottom: none;
-    opacity: .3;
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
   }
   100% {
-    border-bottom: 1px solid white;
-    opacity: 1;
+    border-bottom: 1px solid #930ee0;
   }
 }
 
 @keyframes borderBottom {
   0% {
     border-bottom: none;
-    opacity: .3;
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
   }
   100% {
-    border-bottom: 1px solid white;
-    opacity: 1;
+    border-bottom: 1px solid #930ee0;
   }
 }
 
@@ -60,6 +60,7 @@ html {
 }
 
 body {
+  margin: 0 10px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-color: #e6e6e6;
@@ -142,13 +143,6 @@ body {
   transition: all .4s;
 }
 
-.btn-animated {
-  -webkit-animation: moveInButton .5s ease-out .75s;
-          animation: moveInButton .5s ease-out .75s;
-  -webkit-animation-fill-mode: backwards;
-          animation-fill-mode: backwards;
-}
-
 .footer {
   background-color: black;
   color: white;
@@ -176,7 +170,7 @@ body {
   display: -ms-inline-flexbox;
   display: inline-flex;
   float: right;
-  padding: 10px;
+  margin-right: 40px;
 }
 
 .header__navigation a {
@@ -202,26 +196,43 @@ body {
 .header__navigation a:hover, .header__navigation a:focus {
   border-bottom: 2px solid #930ee0;
   color: #930ee0;
+  -webkit-animation: borderBottom 1s ease-in-out;
+          animation: borderBottom 1s ease-in-out;
 }
 
 .parallax-window {
   min-height: 100vh;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.6)));
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.6));
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.7)));
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7));
+}
+
+.parallax-window-white {
+  min-height: 100vh;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.5)));
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5));
+}
+
+.parallax-window-purple {
+  min-height: 100vh;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(147, 14, 224, 0.3)));
+  background-image: linear-gradient(to right, rgba(147, 14, 224, 0.3));
+}
+
+.parallax-window-gray {
+  min-height: 100vh;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(88, 88, 88, 0.3)));
+  background-image: linear-gradient(to right, rgba(88, 88, 88, 0.3));
 }
 
 .section-about {
-  background-color: aqua;
   height: 100vh;
 }
 
 .section-portfolio {
-  background-color: bisque;
   height: 100vh;
 }
 
 .section-contact {
-  background-color: cadetblue;
   height: 100vh;
 }
 
@@ -236,9 +247,14 @@ body {
 
 .separates {
   height: 10px;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(147, 14, 224, 0.8)), to(rgba(221, 221, 221, 0.8)));
-  background-image: linear-gradient(to right, rgba(147, 14, 224, 0.8), rgba(221, 221, 221, 0.8));
-  -webkit-box-shadow: 0px 1px 6px #930ee0;
-          box-shadow: 0px 1px 6px #930ee0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(147, 14, 224, 0.8)), to(rgba(221, 221, 221, 0.8)));
+  background-image: linear-gradient(to bottom, rgba(147, 14, 224, 0.8), rgba(221, 221, 221, 0.8));
+}
+
+.test {
+  text-align: center;
+  color: black;
+  font-size: 30px;
+  padding: 30px;
 }
 /*# sourceMappingURL=main.css.map */
