--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,21 +12,43 @@
 // }
 .parallax-window {
     min-height: 100vh;
-    background-image: linear-gradient(to bottom, rgba(white, 0.6));
+    background-image: linear-gradient(to right, rgba(black, 0.7));
+}
+
+.parallax-window-white {
+    min-height: 100vh;
+    background-image: linear-gradient(to right, rgba(white, 0.5));
+}
+
+.parallax-window-purple {
+    min-height: 100vh;
+    background-image: linear-gradient(to right, rgba($color-primary, 0.3));
+}
+
+.parallax-window-gray {
+    min-height: 100vh;
+    background-image: linear-gradient(to right, rgba($color-darkgray, 0.3));
 }
 
 .section-about {
-    background-color: aqua; 
-    height: 100vh;   
+    // background-color: $color-white; 
+    height: 100vh;  
+
+    .about-box {
+        // width: 95%;
+        // background-color: $color-lightgray;
+    
+        &-card {
+    
+        }
+    }
 }
 
 .section-portfolio {
-    background-color: bisque;
     height: 100vh;
 }
 
 .section-contact {
-    background-color: cadetblue;
     height: 100vh;
 }
 
@@ -47,7 +69,14 @@
 .separates {
     // background-color: $color-primary;
     height: 10px;
-    background-image: linear-gradient(to right, rgba($color-primary, 0.8), rgba($color-lightgray, 0.8));
-    box-shadow: 0px 1px 6px $color-primary;
+    background-image: linear-gradient(to bottom, rgba($color-primary, 0.8), rgba($color-lightgray, 0.8));
+    // box-shadow: 0px 1px 6px $color-primary;
+}
+
+.test {
+    text-align: center;
+    color: black;
+    font-size: 30px;
+    padding: 30px;
 }
 
