--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Playfair Display', serif;
     font-weight: 400;
     line-height: 1.7;
     color: #777;
