--- a/sass/main.css
+++ b/sass/main.css
@@ -15,12 +15,46 @@ body {
   margin: 0 10px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  background-color: black;
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 400;
   line-height: 1.7;
   color: #777;
+}
+
+.logo {
+  border: 1px solid red;
+  float: left;
+}
+
+.navbar {
+  float: right;
+  padding: 20px;
+}
+
+.navbar-contener {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  list-style: none;
+  text-align: center;
+}
+
+.navbar-items {
+  color: white;
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin: 0 20px;
+}
+
+.navbar-items:hover {
+  border-bottom: 1px solid yellow;
 }
 /*# sourceMappingURL=main.css.map */
