--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,4 @@
-.logo {
+.header-logo {
     border: 1px solid red;
     float: left;
 }
@@ -22,7 +22,51 @@
         margin: 0 20px;
 
         &:hover {
-            border-bottom: 1px solid yellow;
+            border-bottom: 1px solid $primary-color;
+            border-width: 2px;
         }
     }
 }
+
+.start {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    h1 {
+        display: inline-block;
+        font-size: 4.5rem;
+        letter-spacing: .5rem;
+        text-transform: uppercase;
+        background: radial-gradient(
+          circle farthest-corner at center center,
+          #ccc,
+          #333
+        ) no-repeat;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+
+      p {
+        color: #ea9554;            
+        font-weight: 600;        
+        font-size: 1.8rem;        
+        position: absolute;        
+        top: 60px;        
+        left: 3px;
+      }
+
+      &-logo {
+        border: 1px solid white;
+        border-radius: 100px;
+        width: 100px;
+        height: 100px;
+        position: absolute;
+        top: -10%;
+        left: 50%;
+        transform: translate(-50%, -80%);
+        text-align: center;
+      }
+}
+
