--- a/sass/main.css
+++ b/sass/main.css
@@ -9,13 +9,16 @@
 
 html {
   font-size: 62.5%;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
   margin: 0 10px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: black;
+  background: radial-gradient(circle closest-corner at center 125px, #222, black 60%) no-repeat;
+  background-repeat: no-repeat;
 }
 
 body {
@@ -25,7 +28,7 @@ body {
   color: #777;
 }
 
-.logo {
+.header-logo {
   border: 1px solid red;
   float: left;
 }
@@ -55,6 +58,47 @@ body {
 }
 
 .navbar-items:hover {
-  border-bottom: 1px solid yellow;
+  border-bottom: 1px solid #ea9554;
+  border-width: 2px;
+}
+
+.start {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.start h1 {
+  display: inline-block;
+  font-size: 4.5rem;
+  letter-spacing: .5rem;
+  text-transform: uppercase;
+  background: radial-gradient(circle farthest-corner at center center, #ccc, #333) no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.start p {
+  color: #ea9554;
+  font-weight: 600;
+  font-size: 1.8rem;
+  position: absolute;
+  top: 60px;
+  left: 3px;
+}
+
+.start-logo {
+  border: 1px solid white;
+  border-radius: 100px;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: -10%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -80%);
+          transform: translate(-50%, -80%);
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
