--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,9 +3,9 @@ header {
 }
 
 .header-logo {
-    border: 1px solid red;
     float: left;
     position: fixed;
+    font-size: 30px;
 }
 
 .navbar {
