--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -5,10 +5,10 @@
 
     &-circle {
         border: 1px solid white;
-        border-radius: 100px;        
+        border-radius: 5px;        
         position: relative;        
         width: 50px;        
-        height: 50px;        
+        height: 51px;        
         top: 100px;        
         left: 50%;        
         transform: translate(-50%);   
@@ -21,7 +21,15 @@
         transform: translate(-50%, -50%);
         color: white;
         font-size: 30px;
-    }
+        transition: all .5s;
+        width: 100%;
+        height: 100%;
+        padding: 9px 0;
 
-    
+        &:hover {
+            color: $primary-color;
+            animation: arrow-down 1s infinite;
+        }
+
+    }    
 }
