--- a/sass/main.css
+++ b/sass/main.css
@@ -1,3 +1,45 @@
+@-webkit-keyframes arrow-down {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  100% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+}
+
+@keyframes arrow-down {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  100% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+}
+
 *,
 *::after,
 *::before {
@@ -26,6 +68,22 @@ body {
   color: #777;
 }
 
+.u-center-text {
+  text-align: center;
+}
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem;
+}
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem;
+}
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem;
+}
+
 .btn {
   cursor: pointer;
   text-align: center;
@@ -34,10 +92,10 @@ body {
 
 .btn-circle {
   border: 1px solid white;
-  border-radius: 100px;
+  border-radius: 5px;
   position: relative;
   width: 50px;
-  height: 50px;
+  height: 51px;
   top: 100px;
   left: 50%;
   -webkit-transform: translate(-50%);
@@ -52,6 +110,21 @@ body {
           transform: translate(-50%, -50%);
   color: white;
   font-size: 30px;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  width: 100%;
+  height: 100%;
+  padding: 9px 0;
+}
+
+.btn i:hover {
+  color: #ea9554;
+  -webkit-animation: arrow-down 1s infinite;
+          animation: arrow-down 1s infinite;
+}
+
+.col-1-of-2 {
+  width: calc((100% - 6rem) / 2);
 }
 
 header {
@@ -59,9 +132,9 @@ header {
 }
 
 .header-logo {
-  border: 1px solid red;
   float: left;
   position: fixed;
+  font-size: 30px;
 }
 
 .navbar {
@@ -142,10 +215,70 @@ header {
 
 .section-about {
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.section-about_photo {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.section-about_photo img {
+  width: 400px;
+  height: 320px;
+  position: relative;
+  top: 50%;
+  border-radius: 10px;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(-90deg);
+          transform: translate(-50%, -50%) rotate(-90deg);
+}
+
+.section-about_text {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.section-about_text p {
+  text-align: left;
+  width: 500px;
+  height: 400px;
+  font-size: 20px;
+  position: relative;
+  top: 50%;
+  left: 30%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .section-portfolio {
   height: 100vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 50px;
+}
+
+.section-portfolio--box {
+  position: relative;
+  border: 5px solid #ea9554;
+}
+
+.section-portfolio--box a img {
+  width: 300px;
+  height: 180px;
 }
 
 .section-cv {
