--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import 'components/button';
 //LAYOUT
 @import 'layout/footer';
+@import 'layout/grid';
 @import 'layout/header';
 //PAGES
 @import 'pages/home';
