--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,14 +1,69 @@
 .section {
     &-about {
         height: 100vh;
+        display: flex;
+        width: 100%;
+        
+        &_photo {
+            flex: 1;
+
+
+            img {
+                width: 400px; 
+                height: 320px;
+                position: relative;
+                top: 50%;
+                border-radius: 10px;
+                left: 50%;
+                transform: translate(-50%, -50%) rotate(-90deg);
+           }
+        }
+
+        &_text {
+            flex: 1;
+            
+            p {
+                text-align: left;
+                width: 500px;
+                height: 400px;
+                font-size: 20px;
+                position: relative;
+                top: 50%;
+                left: 30%;
+                transform: translate(-50%, -50%);
+            }
+
+        }
     }
 
     &-portfolio {
         height: 100vh;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 50px;
+
+        &--box {
+            position: relative;
+            border: 5px solid $primary-color;
+
+
+            a {
+               
+
+                img {
+                    width: 300px;
+                    height: 180px;
+                }
+            }
+        }
+        
     }
 
     &-cv {
         height: 100vh;
+        
     }
 
     &-contact {
