--- a/sass/main.css
+++ b/sass/main.css
@@ -68,6 +68,13 @@ body {
   color: #777;
 }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  border-left: 15px solid #ea9554;
+  display: inline-block;
+  padding: 10px;
+}
+
 .u-center-text {
   text-align: center;
 }
@@ -82,6 +89,34 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem;
+}
+
+.u-margin-top-small {
+  margin-top: 1.5rem;
+}
+
+.u-margin-top-medium {
+  margin-top: 4rem;
+}
+
+.u-margin-top-big {
+  margin-top: 8rem;
+}
+
+.u-padding-top-big {
+  padding-top: 8rem;
+}
+
+.u-left {
+  text-align: left;
+}
+
+.u-right {
+  text-align: right;
+}
+
+.u-list-style-none {
+  list-style: none;
 }
 
 .btn {
@@ -123,8 +158,51 @@ body {
           animation: arrow-down 1s infinite;
 }
 
-.col-1-of-2 {
+.row {
+  max-width: 114rem;
+  margin: 0 auto;
+}
+
+.row:not(:last-child) {
+  margin-bottom: 8rem;
+}
+
+.row::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.row [class^="col-"] {
+  float: left;
+}
+
+.row [class^="col-"]:not(:last-child) {
+  margin-right: 6rem;
+}
+
+.row .col-1-of-2 {
   width: calc((100% - 6rem) / 2);
+}
+
+.row .col-1-of-3 {
+  width: calc((100% - 2 * 6rem) / 3);
+}
+
+.row .col-2-of-3 {
+  width: calc(2 * ((100% - (2 * 6rem)) / 3) + 6rem);
+}
+
+.row .col-1-of-4 {
+  width: calc((100% - 3 * 6rem) / 4);
+}
+
+.row .col-2-of-4 {
+  width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem);
+}
+
+.row .col-3-of-4 {
+  width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
 }
 
 header {
@@ -215,74 +293,51 @@ header {
 
 .section-about {
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   width: 100%;
 }
 
 .section-about_photo {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  width: 40rem;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
 }
 
 .section-about_photo img {
-  width: 400px;
-  height: 320px;
-  position: relative;
-  top: 50%;
-  border-radius: 10px;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) rotate(-90deg);
-          transform: translate(-50%, -50%) rotate(-90deg);
-}
-
-.section-about_text {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  width: 500px;
 }
 
 .section-about_text p {
-  text-align: left;
-  width: 500px;
-  height: 400px;
   font-size: 20px;
-  position: relative;
-  top: 50%;
-  left: 30%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
 }
 
 .section-portfolio {
   height: 100vh;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin-top: 50px;
-}
-
-.section-portfolio--box {
-  position: relative;
-  border: 5px solid #ea9554;
 }
 
 .section-portfolio--box a img {
   width: 300px;
   height: 180px;
+  border: 2px solid #ea9554;
+  padding: 10px;
 }
 
 .section-cv {
   height: 100vh;
+}
+
+.section-cv .cv-cat {
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.section-cv .cv-cat--2 {
+  font-size: 15px;
 }
 
 .section-contact {
