--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,5 +3,14 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: #777;
-    // padding: 15px 20px;
+}
+
+.heading-secondary {
+    font-size: 3.5rem;
+    // background-image: linear-gradient(to bottom, $primary-color, white 80%);
+    // background-clip: text;
+    // color: transparent;
+    border-left: 15px solid $primary-color;
+    display: inline-block;
+    padding: 10px;
 }
