--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,36 +1,21 @@
 .section {
     &-about {
         height: 100vh;
-        display: flex;
         width: 100%;
         
         &_photo {
-            flex: 1;
-
-
+            width: 40rem;
+            transform: rotate(-90deg);    
+            
             img {
-                width: 400px; 
-                height: 320px;
-                position: relative;
-                top: 50%;
-                border-radius: 10px;
-                left: 50%;
-                transform: translate(-50%, -50%) rotate(-90deg);
-           }
+                width: 500px;
+            }
         }
 
         &_text {
-            flex: 1;
             
             p {
-                text-align: left;
-                width: 500px;
-                height: 400px;
                 font-size: 20px;
-                position: relative;
-                top: 50%;
-                left: 30%;
-                transform: translate(-50%, -50%);
             }
 
         }
@@ -39,14 +24,10 @@
     &-portfolio {
         height: 100vh;
         width: 100%;
-        display: flex;
         align-items: center;
-        justify-content: center;
         margin-top: 50px;
 
         &--box {
-            position: relative;
-            border: 5px solid $primary-color;
 
 
             a {
@@ -55,6 +36,8 @@
                 img {
                     width: 300px;
                     height: 180px;
+                    border: 2px solid $primary-color;
+                    padding: 10px;
                 }
             }
         }
@@ -63,7 +46,17 @@
 
     &-cv {
         height: 100vh;
-        
+
+        .cv-cat {
+            font-size: 20px;
+            text-transform: uppercase;
+            font-weight: 700;
+        }
+
+        .cv-cat--2 {
+            font-size: 15px;
+        }
+
     }
 
     &-contact {
