--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,17 +1,21 @@
-header {
-    height: 100vh;
-}
-
-.header-logo {
-    float: left;
+.header {
     position: fixed;
-    font-size: 30px;
+    height: 60px;
+    width: 100%;
+    background-color: #333;
+    border-bottom: 1px solid;
+    z-index: 1;
+
+    &-logo {
+        float: left;
+        position: fixed;
+        font-size: 30px;
+    }
 }
 
 .navbar {
-    right: 0;
+    text-align: right;
     padding: 20px;
-    position: fixed;
 
     &-contener {
         display: inline-flex;
