--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,10 @@
 .section {
+
+    &-start {
+        height: 100vh;
+        width: 100%;
+    }
+
     &-about {
         height: 100vh;
         width: 100%;
