--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,16 +1,5 @@
 @keyframes arrow-down {
-    0% {
-        transform: scale(1);
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-    }
-    100% {
-        transform: scale(1.2);
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
+    to {
+        transform: translateY(5px);
     }
 }
