--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,9 @@
 .section {
 
     &-start {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 100vh;
         width: 100%;
     }
