--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -67,7 +67,8 @@
 
       .neon1 {
         color: #ea9554;   
-        font-family: 'Monoton', cursive;       
+        // font-family: 'Monoton', cursive;
+        font-family: 'Warnes', cursive;
         // font-weight: 600;        
         font-size: 1.8rem;        
         position: absolute;        
@@ -83,7 +84,8 @@
 
       .neon2 {
         color: #ea9554;   
-        font-family: 'Monoton', cursive;       
+        // font-family: 'Monoton', cursive; 
+        font-family: 'Warnes', cursive;      
         // font-weight: 600;        
         font-size: 1.8rem;        
         position: absolute;        
