--- a/sass/main.css
+++ b/sass/main.css
@@ -293,7 +293,7 @@ body {
 
 .start .neon1 {
   color: #ea9554;
-  font-family: 'Monoton', cursive;
+  font-family: 'Warnes', cursive;
   font-size: 1.8rem;
   position: absolute;
   top: 60px;
@@ -306,7 +306,7 @@ body {
 
 .start .neon2 {
   color: #ea9554;
-  font-family: 'Monoton', cursive;
+  font-family: 'Warnes', cursive;
   font-size: 1.8rem;
   position: absolute;
   top: 60px;
